[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aryballe_odors"
authors = [
    {name = "Matt Einhorn", email = "me263@cornell.edu"},
]
description = "Parses Aryballe sensor data"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "scikit-learn",
]
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
version = {attr = "aryballe_odors.VERSION"}
readme = {file = ["README.md"], content-type = "text/markdown"}
